crates/ditto-checker/tests/golden/type-errors/module_not_found_in_package.ditto
module Test exports (..);

import (test-stuff) Missing.Module;
